100vw width for cover to avoid layout collapsing on view transition

--- a/src/stylus/slides/cover.styl
+++ b/src/stylus/slides/cover.styl
@@ -7,7 +7,7 @@
   align-items center
   display flex
   justify-content center
-  width 100%
+  width 100vw
 
 .cover__frame
   background-color var(--cover-background)
